--- a/public/index.html
+++ b/public/index.html
@@ -2,33 +2,48 @@
 <html>
   <head>
     <title>test</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/main.css" media="screen" title="no title" charset="utf-8">
     <script src="js/Chart.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js"></script>
+    <script src='/js/map.js'></script>
   </head>
   <body>
-    <canvas id="myChart" width="400" height="400"></canvas>
-    <script charset="utf-8">
-      var data = [
-        {
-          value: 300,
-          color: 'red',
-          highlight: 'orange',
-          label: 'red'
-        },
-        {
-          value: 200,
-          color: 'blue',
-          highlight: 'lightblue',
-          label: 'blue'
-        },
-        {
-          value: 75,
-          color: 'pink',
-          highlight: 'brown',
-          label: 'pink'
-        }
-      ];
-      var ctx = document.getElementById("myChart").getContext("2d");
-      var myDoughnutChart = new Chart(ctx).Doughnut(data);
-    </script>
+    <div class="row">
+      <div class="col-sm-6">
+        <div id="map"></div>
+
+      </div>
+      <div class="col-sm-6">
+        <canvas id="myChart" width="400" height="400"></canvas>
+        <script charset="utf-8">
+          var data = [
+            {
+              value: 300,
+              color: 'red',
+              highlight: 'orange',
+              label: 'red'
+            },
+            {
+              value: 200,
+              color: 'blue',
+              highlight: 'lightblue',
+              label: 'blue'
+            },
+            {
+              value: 75,
+              color: 'pink',
+              highlight: 'brown',
+              label: 'pink'
+            }
+          ];
+          var ctx = document.getElementById("myChart").getContext("2d");
+          var myDoughnutChart = new Chart(ctx).Doughnut(data);
+        </script>
+      </div>
+    </div>
+
+
   </body>
 </html>
